Update public folder checks